fix redirect khi dat cho thanh cong

--- a/src/main/resources/templates/datchothietbi.html
+++ b/src/main/resources/templates/datchothietbi.html
@@ -42,8 +42,9 @@
                 <td class="fs-sm" th:utext="${tb.moTaTB}"></td>
                 <td class="text-center">
                   <div class="btn-group">
-                    <a th:href="@{/datchothietbi/{maTB}/datcho(maTB=${tb.maTB})}" class="btn btn-sm btn-alt-secondary"
-                      data-bs-toggle="tooltip" title="Đặt chỗ" <i class="fa fa-fw fa-pencil-alt datchobtn"></i>
+                    <a th:href="@{/datchothietbi/{maTB}/datcho(maTB=${tb.maTB})}"
+                      class="btn btn-sm btn-alt-secondary datchobtn" data-bs-toggle="tooltip" title="Đặt chỗ" <i
+                      class="fa fa-fw fa-pencil-alt "></i>
                     </a>
                   </div>
                 </td>
