chức năng vào vào khu học tập

--- a/src/main/resources/templates/dashboard-layout.html
+++ b/src/main/resources/templates/dashboard-layout.html
@@ -166,6 +166,12 @@
                   <span class="nav-main-link-name">Xử lý vi phạm</span>
                 </a>
               </li>
+              <li class="nav-main-item">
+                <a class="nav-main-link" th:href="@{/khuhoctap}">
+                  <i class="nav-main-link-icon si si-shield"></i>
+                  <span class="nav-main-link-name">Vào khu học tập</span>
+                </a>
+              </li>
             </ul>
           </div>
           <!-- END Side Navigation -->
