--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Đăng ký</title>
+     <script defer th:src="@{/assets/js/pages/thanh-vien-create.js}"></script>
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <div layout:fragment="body">
@@ -32,6 +34,7 @@
                 name="val-matv"
                 th:field="*{maTV}"
                 placeholder="Nhập mã thành viên"
+                readonly
               />
               <div
                 th:if="${#fields.hasErrors('maTV')}"
@@ -70,6 +73,7 @@
                 name="val-khoa"
                 th:field="*{khoa}"
                 placeholder="Nhập khoa"
+                readonly
               />
               <div
                 th:if="${#fields.hasErrors('khoa')}"
@@ -77,7 +81,7 @@
                 th:errors="*{khoa}"
               ></div>
             </div>
-            <div class="mb-4">
+            <!--<div class="mb-4">
               <label class="form-label" for="val-nganh"
                 >Ngành <span class="text-danger">*</span></label
               >
@@ -95,7 +99,22 @@
                 class="invalid-feedback"
                 th:errors="*{nganh}"
               ></div>
-            </div>
+            </div>-->
+            <div class="mb-4">
+                    <label class="form-label" for="nganh">Ngành</label>
+                    <select id="val-nganh" name="nganh" class="form-control">
+                        <option value="Toán">Toán</option>
+                        <option value="Văn">Văn</option>
+                        <option value="Sử">Sử</option>
+                        <option value="CNTT">CNTT</option>
+                        <option value="Lí">Lí</option>
+                        <option value="Địa">Địa</option>
+                        <option value="Anh">Anh</option>
+                        <option value="NNA">NNA</option>
+                        <option value="QTKD">QTKD</option>
+                        <option value="TLH">TLH</option>
+                    </select>
+                </div>
             <div class="mb-4">
               <label class="form-label" for="val-sdt"
                 >Số điện thoại <span class="text-danger">*</span></label
